
Mon Jul 17 15:03:43 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm.h - Add per-realm parameter block data structure
		(krb5_realm_params).
	* adm_proto.h - Add dummy declaration for krb5_realm_params if adm.h
		not included.  Add prototypes for realm parameter functions.
	* kdb.h - Add stash file parameter to krb5_db_fetch_mkey().

Sun Jul  9 21:47:49 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* los-proto.h: Add krb5_auth_con_genaddrs prototype

Fri Jul 7 15:58:07 EDT 1995	Paul Park	(pjpark@mit.edu)
	* rsa-md5.h - Add RSA_MD5_DES_CONFOUND_LENGTH - the length of the
		confounder for RSA_MD5_DES per RFC1510.

Wed July  5 15:52:31 1995  James Mattly  <mattly@fusion.com>
	* k5-config.h Added _MACINTOSH for macintosh build conditions
	* macsock.h made definition of PROTOTYPE conditional

Fri Jun 30 16:13:41 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb.h - Add kdb dispatch table and set routine under KDB5_DISPATCH.


Tue Jun 27 16:12:09 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_proto.h - Change second argument of aprof_get... routines to be
		const char *.
	* configure.in, k5-config.h - Reinstate KRB5_PROVIDE_PROTOTYPES.  This
		is needed for compilers which recognize prototypes but don't
		set __STDC__ or _WINDOWS.

Thu Jun 22 16:11:07 1995  Tom Yu  (tlyu@dragons-lair)

	* k5-config.h: remove definition for KRB5_PROVIDE_PROTOTYPES
		because we've reversed the sense

	* configure.in: KBR5_PROVIDE_PROTOTYPES -> KRB5_NO_PROTOTYPES;
		NO_NESTED_PROTOTYPES -> KRB5_NO_NESTED_PROTOTYPES

	* rsa-md5.h: reverse sense of KRB5_PROVIDE_PROTOTYPES

Thu Jun 22 11:52:07 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_proto.h - Add prototypes for kadm library profile handling
		routines.  These are wrappers for profile routines.
	* kdb.h - Remove KDB_CONVERT_KEY_{TO,OUTOF}_DB.

Wed Jun 21 17:39:25 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Replace krb5_sigtype tests with KRB5_SIGTYPE which
		has been moved to aclocal.m4
